@@ -4,11 +4,14 @@
 
 Summary: Enlightened terminal emulator
 Name: Eterm
-Version: 0.9.3
-Release: 1
+Version: 0.9.4
+#Release: 1
+Release: 0.%(date '+%Y%m%d')
 License: BSD
 Group: User Interface/X
 Requires: imlib2, imlib2-loader_jpeg, imlib2-loader_png
+#BuildSuggests: XFree86-devel xorg-x11-devel freetype-devel
+BuildRequires: imlib2-devel
 Source0: ftp://ftp.eterm.org/pub/Eterm/%{name}-%{version}.tar.%{compression}
 Source1: ftp://ftp.eterm.org/pub/Eterm/%{name}-bg-%{version}.tar.%{compression}
 URL: http://www.eterm.org/
